TOC navigation fixes on firefox

--- a/_sass/components/_navigation-toc.scss
+++ b/_sass/components/_navigation-toc.scss
@@ -1,6 +1,6 @@
 /*TOC navigation*/
 .search-toggle {
-  background-image: url('data:image/svg+xml;utf-8,<svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Oval 1</title><path d="M13.46 14.39c-.78.586-1.748.933-2.8.933-2.573 0-4.66-2.087-4.66-4.66C6 8.086 8.087 6 10.66 6c2.575 0 4.662 2.087 4.662 4.662 0 1.05-.348 2.02-.935 2.8.075.035.144.082.205.143l3.2 3.2c.275.275.28.717.004.992-.273.273-.72.27-.992-.003l-3.2-3.2c-.062-.06-.11-.13-.143-.205zM12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12zm-1.34-9.61c2.06 0 3.73-1.67 3.73-3.728 0-2.06-1.67-3.73-3.73-3.73-2.058 0-3.728 1.67-3.728 3.73s1.67 3.73 3.73 3.73z" fill="#207CDF" fill-rule="evenodd"/></svg>');
+  background-image: url('data:image/svg+xml;utf-8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%3E%3Cpath%20fill%3D%22%23207CDF%22%20fill-rule%3D%22evenodd%22%20d%3D%22M13.46%2014.39c-.78.586-1.748.933-2.8.933-2.573%200-4.66-2.087-4.66-4.66C6%208.086%208.087%206%2010.66%206c2.575%200%204.662%202.087%204.662%204.662%200%201.05-.348%202.02-.935%202.8.075.035.144.082.205.143l3.2%203.2c.275.275.28.717.004.992-.273.273-.72.27-.992-.003l-3.2-3.2c-.062-.06-.11-.13-.143-.205zM12%2024c6.627%200%2012-5.373%2012-12S18.627%200%2012%200%200%205.373%200%2012s5.373%2012%2012%2012zm-1.34-9.61c2.06%200%203.73-1.67%203.73-3.728%200-2.06-1.67-3.73-3.73-3.73-2.058%200-3.728%201.67-3.728%203.73s1.67%203.73%203.73%203.73z%22%2F%3E%3C%2Fsvg%3E');
   -webkit-transition: -webkit-filter .1s ease-out;
   transition: filter .1s ease-out;
   &:hover,
